[package]
name = "web-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dioxus = { version = "0.6.0", features = ["web"] }
dioxus-web = "0.6.0"
dioxus-router = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "console",
    "History",
    "Location",
    "Url",
    "Event",
    "MouseEvent",
    "EventTarget",
    "Node",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlParagraphElement",
    "HtmlHeadingElement",
    "Storage",
    "StorageManager",
    "StorageType",
    "StorageEvent",
    "StorageEventInit",
    "HtmlImageElement"
]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
comrak = "0.16"
console_error_panic_hook = "0.1"
uuid = { version = "1.7", features = ["v4", "js"] }
gloo-net = "0.6"
chrono = "0.4"
trunk = "0.21.14"
futures = "0.3.31"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = false
lto = false
codegen-units = 16
incremental = true
