[package]
name = "web-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-web = "0.6.3"
dioxus-hooks = "0.6.2"
dioxus-router = "0.6.3"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Storage",
    "Location",
    "Url",
    "UrlSearchParams",
    "History",
    "HtmlImageElement",
] }
js-sys = "0.3.66"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
comrak = "0.20.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
futures = "0.3.30"
gloo-net = "0.5.0"
chrono = "0.4.31"
once_cell = "1.21.3"

[build-dependencies]
walkdir = "2.4.0"
comrak = "0.20.0"
